--- a/control
+++ b/control
@@ -1,8 +1,8 @@
-Package: com.wrp1002.nosettingsbadge
-Name: NoSettingsBadge
-Version: 1.1.0
+Package: com.wrp1002.flashlightsettings
+Name: FlashlightSettings
+Version: 1.0.0
 Architecture: iphoneos-arm
-Description: Remove settings notification badge!
+Description: Useful settings for the flashlight!
 Maintainer: Wes <wes.hamster@gmail.com>
 Author: Wes <wes.hamster@gmail.com>
 Section: Tweaks
