added "Max Brightness" option, turn on flashlight in a nicer way, cleaned up code

--- a/flashlightsettingsprefs/Resources/Info.plist
+++ b/flashlightsettingsprefs/Resources/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>FlashlightSettingsPrefs</string>
+	<string>FlashlightSettings</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.wrp1002.flashlightsettingsprefs</string>
 	<key>CFBundleInfoDictionaryVersion</key>
