--- a/flashlightsettingsprefs/Resources/Root.plist
+++ b/flashlightsettingsprefs/Resources/Root.plist
@@ -29,8 +29,6 @@
         <string>PSGroupCell</string>
         <key>label</key>
         <string>When flashlight is on:</string>
-        <key>footerText</key>
-        <string>footer</string>
       </dict>
       <dict>
         <key>cell</key>
@@ -66,9 +64,13 @@
         <key>label</key>
         <string>Flashlight Shortcut</string>
         <key>footerText</key>
-        <string>These shortcuts let you toggle the flashlight\n\nFor triple click to work, you have to have an accessibility shortcut set</string>
+        <string>These shortcuts let you toggle the flashlight
+
+For triple click to work, you have to have an accessibility shortcut set, which this tweak will override
+
+"Set Max Brightness" will set the highest flashlight level when you use the shortcut. Otherwise, the last set level will be used</string>
       </dict>
-       <dict>
+      <dict>
         <key>cell</key>
         <string>PSLinkListCell</string>
         <key>detail</key>
@@ -81,18 +83,18 @@
         <true/>
         <key>validTitles</key>
         <array>
-		  <string>Disabled</string>
+          <string>Disabled</string>
           <string>Volume Up + Down</string>
           <string>Lock button triple click</string>
         </array>
         <key>validValues</key>
         <array>
-		  <string>disabled</string>
+          <string>disabled</string>
           <string>volume</string>
           <string>tripleLock</string>
         </array>
-		<key>default</key>
-		<string>disabled</string>
+        <key>default</key>
+        <string>disabled</string>
         <key>defaults</key>
         <string>com.wrp1002.flashlightsettings</string>
         <key>PostNotification</key>
@@ -102,9 +104,9 @@
         <key>cell</key>
         <string>PSSwitchCell</string>
         <key>key</key>
-        <string>kVolumeShortcutEnabled</string>
+        <string>kMaxLevel</string>
         <key>label</key>
-        <string>Enabled</string>
+        <string>Set Max Brightness</string>
         <key>default</key>
         <true/>
         <key>defaults</key>
@@ -113,51 +115,51 @@
         <string>com.wrp1002.flashlightsettings/ReloadPrefs</string>
       </dict>
 
-      <dict>
-		<key>cell</key>
-		<string>PSGroupCell</string>
-		<key>footerText</key>
-		<string>Respringing is NOT needed for changes to take effect!</string>
-	</dict>
-	<dict>
-		<key>cell</key>
-			<string>PSButtonCell</string>
-			<key>label</key>
-			<string>Reset all settings</string>
-			<key>action</key>
-			<string>Reset</string>
-			<key>isDestructive</key>
-			<true/>
-			<key>confirmation</key>
-			<dict>
-				<key>prompt</key>
-				<string>Are you sure you want to reset all settings?</string>
-				<key>title</key>
-				<string>Reset!</string>
-				<key>cancelTitle</key>
-				<string>Cancel</string>
-			</dict>
-	</dict>
-	<dict>
-		<key>cell</key>
-			<string>PSButtonCell</string>
-			<key>label</key>
-			<string>Respring</string>
-			<key>action</key>
-			<string>Respring</string>
-			<key>isDestructive</key>
-			<true/>
-			<key>confirmation</key>
-			<dict>
-				<key>prompt</key>
-				<string>Are you sure you want to respring your device?</string>
-				<key>title</key>
-				<string>Respring!</string>
-				<key>cancelTitle</key>
-				<string>Cancel</string>
-			</dict>
-	</dict>
 
+      <dict>
+        <key>cell</key>
+        <string>PSGroupCell</string>
+        <key>footerText</key>
+        <string>Respringing is NOT needed for changes to take effect!</string>
+      </dict>
+      <dict>
+        <key>cell</key>
+        <string>PSButtonCell</string>
+        <key>label</key>
+        <string>Reset all settings</string>
+        <key>action</key>
+        <string>Reset</string>
+        <key>isDestructive</key>
+        <true/>
+        <key>confirmation</key>
+        <dict>
+          <key>prompt</key>
+          <string>Are you sure you want to reset all settings?</string>
+          <key>title</key>
+          <string>Reset!</string>
+          <key>cancelTitle</key>
+          <string>Cancel</string>
+        </dict>
+      </dict>
+      <dict>
+        <key>cell</key>
+        <string>PSButtonCell</string>
+        <key>label</key>
+        <string>Respring</string>
+        <key>action</key>
+        <string>Respring</string>
+        <key>isDestructive</key>
+        <true/>
+        <key>confirmation</key>
+        <dict>
+          <key>prompt</key>
+          <string>Are you sure you want to respring your device?</string>
+          <key>title</key>
+          <string>Respring!</string>
+          <key>cancelTitle</key>
+          <string>Cancel</string>
+        </dict>
+      </dict>
       <dict>
         <key>cell</key>
         <string>PSGroupCell</string>
