--- a/flashlightsettingsprefs/Resources/Root.plist
+++ b/flashlightsettingsprefs/Resources/Root.plist
@@ -132,6 +132,54 @@ For triple click to work, you have to have an accessibility shortcut set, which 
         <string>com.wrp1002.flashlightsettings/ReloadPrefs</string>
       </dict>
 
+      <dict>
+        <key>cell</key>
+        <string>PSGroupCell</string>
+        <key>label</key>
+        <string>Flashlight Timeout</string>
+        <key>footerText</key>
+        <string>Automatically turn off the flashlight after X minutes</string>
+      </dict>
+      <dict>
+        <key>cell</key>
+        <string>PSSwitchCell</string>
+        <key>key</key>
+        <string>kFlashlightTimeoutEnabled</string>
+        <key>label</key>
+        <string>Enabled</string>
+        <key>default</key>
+        <false/>
+        <key>defaults</key>
+        <string>com.wrp1002.flashlightsettings</string>
+        <key>PostNotification</key>
+        <string>com.wrp1002.flashlightsettings/ReloadPrefs</string>
+      </dict>
+      <dict>
+        <key>cell</key>
+        <string>PSEditTextCell</string>
+        <key>key</key>
+        <string>kFlashlightTimeoutVal</string>
+        <key>default</key>
+        <string>15</string>
+        <key>keyboard</key>
+        <string>numbers</string>
+        <key>noAutoCorrect</key>
+        <true/>
+        <key>isIP</key>
+        <false/>
+        <key>isURL</key>
+        <false/>
+        <key>isNumeric</key>
+        <true/>
+        <key>isDecimalPad</key>
+        <false/>
+        <key>isEmail</key>
+        <false/>
+        <key>defaults</key>
+        <string>com.wrp1002.flashlightsettings</string>
+        <key>PostNotification</key>
+        <string>com.wrp1002.flashlightsettings/ReloadPrefs</string>
+      </dict>
 
       <dict>
         <key>cell</key>
@@ -223,6 +271,7 @@ For triple click to work, you have to have an accessibility shortcut set, which 
         <key>icon</key>
         <string>paypal.png</string>
       </dict>
+
 
     </array>
     <key>title</key>
